Bug 590973 - Reflect.parse(): expose to chrome as a toolkit component (r=gal)