js/src/jsreflect.cpp
@@ -3139,20 +3139,6 @@ ASTSerializer::functionBody(JSParseNode *pn, TokenPos *pos, Value *dst)
 
 } /* namespace js */
 
-/* Reflect class */
-
-Class js_ReflectClass = {
-    js_Reflect_str,
-    JSCLASS_HAS_CACHED_PROTO(JSProto_Reflect),
-    PropertyStub,
-    PropertyStub,
-    PropertyStub,
-    StrictPropertyStub,
-    EnumerateStub,
-    ResolveStub,
-    ConvertStub
-};
-
 static JSBool
 reflect_parse(JSContext *cx, uint32 argc, jsval *vp)
 {
@@ -3276,14 +3262,16 @@ static JSFunctionSpec static_methods[] = {
 };
 
 
-JSObject *
-js_InitReflectClass(JSContext *cx, JSObject *obj)
+JS_BEGIN_EXTERN_C
+
+JS_PUBLIC_API(JSObject *)
+JS_InitReflect(JSContext *cx, JSObject *obj)
 {
-    JSObject *Reflect = NewNonFunction<WithProto::Class>(cx, &js_ReflectClass, NULL, obj);
+    JSObject *Reflect = NewNonFunction<WithProto::Class>(cx, &js_ObjectClass, NULL, obj);
     if (!Reflect)
         return NULL;
 
-    if (!JS_DefineProperty(cx, obj, js_Reflect_str, OBJECT_TO_JSVAL(Reflect),
+    if (!JS_DefineProperty(cx, obj, "Reflect", OBJECT_TO_JSVAL(Reflect),
                            JS_PropertyStub, JS_StrictPropertyStub, 0)) {
         return NULL;
     }
@@ -3291,7 +3279,7 @@ js_InitReflectClass(JSContext *cx, JSObject *obj)
     if (!JS_DefineFunctions(cx, Reflect, static_methods))
         return NULL;
 
-    MarkStandardClassInitializedNoProto(obj, &js_ReflectClass);
-
     return Reflect;
 }
+
+JS_END_EXTERN_C
